fixed alignment issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,35 @@
  *= require_self
  */
 
- body {
-    background-color: blue;
- }
+* {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.body {
+    width: 80vw;
+    outline: blue solid 2px;
+    margin-left: auto;
+    margin-right: auto;
+    /* text-align: center; */
+    font-style: sans-serif;
+    /* background-color: blue; */
+}
+
+.titleimage {
+    text-align: center;
+}
+
+.allocation {
+    display: inline-block;
+}
+
+.allocation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+}
+
+#portfolio {
+    width: 60%;
+}
